// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NetworkInterfacesCard should not render hasFqdn 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="network-interfaces-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r10:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Network interfaces
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Network interfaces title"
              class="pf-v6-c-description-list pf-m-2-col"
              data-ouia-component-id="Network interfaces title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv4 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv4 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv4 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv4"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Interfaces/NICs
                  </span>
                </dt>
                <dd
                  aria-label="Interfaces/NICs value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Interfaces/NICs value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/interfaces"
                      >
                        1 NIC
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv6 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv6 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv6 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv6"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkInterfacesCard should not render hasIPv4 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="network-interfaces-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rn:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Network interfaces
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Network interfaces title"
              class="pf-v6-c-description-list pf-m-2-col"
              data-ouia-component-id="Network interfaces title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Interfaces/NICs
                  </span>
                </dt>
                <dd
                  aria-label="Interfaces/NICs value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Interfaces/NICs value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/interfaces"
                      >
                        1 NIC
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv6 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv6 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv6 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv6"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    FQDN
                  </span>
                </dt>
                <dd
                  aria-label="FQDN value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="FQDN value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkInterfacesCard should not render hasIPv6 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="network-interfaces-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rq:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Network interfaces
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Network interfaces title"
              class="pf-v6-c-description-list pf-m-2-col"
              data-ouia-component-id="Network interfaces title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv4 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv4 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv4 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv4"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Interfaces/NICs
                  </span>
                </dt>
                <dd
                  aria-label="Interfaces/NICs value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Interfaces/NICs value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/interfaces"
                      >
                        1 NIC
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    FQDN
                  </span>
                </dt>
                <dd
                  aria-label="FQDN value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="FQDN value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkInterfacesCard should not render hasInterfaces 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="network-interfaces-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rt:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Network interfaces
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Network interfaces title"
              class="pf-v6-c-description-list pf-m-2-col"
              data-ouia-component-id="Network interfaces title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv4 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv4 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv4 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv4"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv6 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv6 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv6 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv6"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    FQDN
                  </span>
                </dt>
                <dd
                  aria-label="FQDN value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="FQDN value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkInterfacesCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="network-interfaces-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r2:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Network interfaces
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Network interfaces title"
              class="pf-v6-c-description-list pf-m-2-col"
              data-ouia-component-id="Network interfaces title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv4 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv4 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv4 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Interfaces/NICs
                  </span>
                </dt>
                <dd
                  aria-label="Interfaces/NICs value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Interfaces/NICs value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv6 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv6 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv6 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    FQDN
                  </span>
                </dt>
                <dd
                  aria-label="FQDN value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="FQDN value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkInterfacesCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="network-interfaces-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Network interfaces
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Network interfaces title"
              class="pf-v6-c-description-list pf-m-2-col"
              data-ouia-component-id="Network interfaces title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv4 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv4 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv4 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv4"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Interfaces/NICs
                  </span>
                </dt>
                <dd
                  aria-label="Interfaces/NICs value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Interfaces/NICs value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/interfaces"
                      >
                        1 NIC
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv6 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv6 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv6 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv6"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    FQDN
                  </span>
                </dt>
                <dd
                  aria-label="FQDN value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="FQDN value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkInterfacesCard should render correctly with rhsm facts 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="network-interfaces-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r8:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Network interfaces
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Network interfaces title"
              class="pf-v6-c-description-list pf-m-2-col"
              data-ouia-component-id="Network interfaces title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv4 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv4 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv4 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Interfaces/NICs
                  </span>
                </dt>
                <dd
                  aria-label="Interfaces/NICs value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Interfaces/NICs value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv6 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv6 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv6 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    FQDN
                  </span>
                </dt>
                <dd
                  aria-label="FQDN value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="FQDN value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkInterfacesCard should render enabled/disabled 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="network-interfaces-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rb:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Network interfaces
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Network interfaces title"
              class="pf-v6-c-description-list pf-m-2-col"
              data-ouia-component-id="Network interfaces title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv4 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv4 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv4 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv4"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Interfaces/NICs
                  </span>
                </dt>
                <dd
                  aria-label="Interfaces/NICs value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Interfaces/NICs value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/interfaces"
                      >
                        1 NIC
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv6 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv6 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv6 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv6"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    FQDN
                  </span>
                </dt>
                <dd
                  aria-label="FQDN value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="FQDN value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkInterfacesCard should render extra 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="network-interfaces-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r13:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Network interfaces
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Network interfaces title"
              class="pf-v6-c-description-list pf-m-2-col"
              data-ouia-component-id="Network interfaces title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv4 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv4 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv4 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv4"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Interfaces/NICs
                  </span>
                </dt>
                <dd
                  aria-label="Interfaces/NICs value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Interfaces/NICs value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/interfaces"
                      >
                        1 NIC
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    IPv6 addresses
                  </span>
                </dt>
                <dd
                  aria-label="IPv6 addresses value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="IPv6 addresses value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/ipv6"
                      >
                        1 address
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    FQDN
                  </span>
                </dt>
                <dd
                  aria-label="FQDN value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="FQDN value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    something
                  </span>
                </dt>
                <dd
                  aria-label="something value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="something value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    with click
                  </span>
                </dt>
                <dd
                  aria-label="with click value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="with click value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="localhost:3000/example/path/undefined"
                      >
                        1 tests
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
